Update link to Fortune Tiger game

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <h1>Cassino Demo</h1>
-<a href="fortune-tiger/game.html" class="btn">Jogar Fortune Tiger</a>
+<a href="game.html" class="btn">Jogar Fortune Tiger</a>
 </body>
 </html>
